# SpotifyScraper

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmessage  .nojekyll  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  Dockerfile  FILESYSTEM_SERVER_RESOLUTION.md  FINAL_GITHUB_PAGES_FIX.md  FIXES_SUMMARY.md  GITHUB_PAGES_FIX.md  GITHUB_SECRETS_SETUP.md  LICENSE  MANIFEST.in  MCP_TESTING.md  MISSING_PAGES_AUDIT.md  MISSING_PAGES_LIST.md  Makefile  PLANNING.md  POST_RELEASE_CHECKLIST.md  PROJECT_AUTOMATION_COMPLETE.md  PUBLISH_INSTRUCTIONS.md  PYPI_DEPLOYMENT_INSTRUCTIONS.md  PYPI_README.md  README.md  README_TESTING.md  README_UNIFIED.md  RELEASE_NOTES.md  SECURITY.md  _config.yml  (+28 more)
.claude/: settings.json  settings.local.json
.github/: .gitignore  FUNDING.yml  claude.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: canary.yml  ci.yml  claude.yml  cleanup-claude-issues.yml  cleanup-deployments.yml  codeql.yml  container.yml  copilot-setup-steps.yml  dependencies.yml  dependency-review.yml  docker.yml  docs.yml  main.yml  manual-test.yml  mark-test-pypi-success.yml  pages.yml  pr-labeler.yml  publish-mcp.yml  publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml  security.yml  stale.yml
.tox/python/Scripts/: activate  activate.bat  activate.xsh
SpotifyScraper/: __init__.py  request.py  requests_base_scraper.py  scraper.py  temp.py
debug_html/: episode_auth.html  episode_embed.html  episode_page.html  set_cookies.js  show_embed.html
docs/: README_TESTING.md  changelog.md  conf.py  contributing.md  faq.md  features.md  index.md  index.rst  legal.md  mcp_testing.md  migration.md  requirements.txt  troubleshooting.md  webdriver_manager_usage.md
docs/advanced/: architecture.md  custom-extractors.md  index.md  performance.md  scaling.md
docs/api/: client.md  exceptions.md  extractors.md  index.md  media.md  parsers.md  utils.md
docs/examples/: advanced.md  bulk_operations.md  cli.md  corrected_examples.md  index.md  projects.md  quickstart.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guide/: authentication.md  basic-usage.md  error-handling.md  index.md  media-downloads.md
docs/guides/: anti-ban.md  async.md  authentication.md  batch.md  browser-fallback.md  caching.md  charts.md  cli.md  discovery.md  entities.md  error-handling.md  localization.md  lyrics-and-cookies.md  mcp.md  media-downloads.md  more.md  search.md  visual-voice-page.md  visual.md
docs/reference/: async-client.md  client.md  errors.md  http.md  media.md  models.md
docs/stylesheets/: extra.css
examples/: __init__.py  basic_usage.py  cli_examples.sh  config_example.json  config_usage_example.py  corrected_basic_usage.py  corrected_example.py  mcp_testing_demo.py  production_usage.py  rate_limiting_example.py  selenium_examples.py  simple_test.py  track_fields_demo.py  webdriver_manager_demo.py
extras/blog/: spotifyscraper-v3.md
extras/growth/: GROWTH_PLAN.md  awesome-lists.md  mcp-directories.md
extras/growth/launch/: posting-checklist.md  reddit.md  show-hn.md
extras/growth/seo/: no-api-key-spotify-python.md
extras/growth/social-preview/: README.md
extras/wiki/: Home.md
openspec/changes/add-account-and-self-aware-session/: proposal.md  tasks.md
openspec/changes/add-album-artist-playlist/: design.md  proposal.md  tasks.md
openspec/changes/add-anonymous-token/: design.md  tasks.md
openspec/changes/add-autonomous-maintenance/: tasks.md
openspec/changes/add-batch-helpers/: tasks.md
openspec/changes/add-browser-fallback/: design.md  proposal.md  tasks.md
openspec/changes/add-browser-login/: design.md  tasks.md
package_build_env/: pyvenv.cfg
policy/: agent.md  promotion.md  scopes.yml
scripts/: capture_fixtures.py  continuous_integration_monitor.py  ensure_deployments_green.py  final_verification.py  github_actions_monitor.py  pre_commit_check.py  refresh_totp.py  test_pypi_install.sh  verify_github_actions.py  verify_package.py
src/: __init__.py
src/spotify_scraper/: __init__.py  __main__.py  batch.py  client.py  config_manager.py  constants.py  errors.py  exceptions.py  py.typed  urls.py
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_json_parser_none_handling.py  test_spotifyscraper.py
tests/browser/: test_login.py  test_playwright_transport.py
tests/integration/: test_full_flow.py  test_full_system.py  test_production_usage.py
tests/live/: test_account.py  test_cli.py  test_discovery.py  test_locale.py  test_lyrics.py  test_media.py  test_more.py  test_search.py  test_track.py  test_transcript.py  test_visual.py
tests/unit/: test_album_extractor.py  test_artist_extractor.py  test_auth_session.py  test_bulk_operations.py  test_cli.py  test_client.py  test_client_account.py  test_client_async.py  test_client_batch.py  test_client_batch_async.py  test_client_canvas.py  test_client_charts.py  test_client_colors.py  test_client_discovery.py  test_client_entities.py  test_client_entities_async.py  test_client_locale.py  test_client_login.py  test_client_lyrics.py  test_client_more.py  test_client_search.py  test_client_transcript.py  test_compat.py  test_core_config.py  test_core_scraper.py  test_episode_extractor.py  test_errors.py  test_mcp.py  test_package.py  test_parity.py  test_playlist_extractor.py  test_show_extractor.py  test_track_album.py  test_track_album_mcp.py  test_track_extractor.py  test_url_podcast.py  test_urls.py
venv_docs/: pyvenv.cfg
venv_publish/: pyvenv.cfg
venv_security/: pyvenv.cfg
wiki/: API-Reference.md  API-Reference_NEW.md  CLI-Usage  Configuration  Contributing  Examples.md  Examples_NEW.md  FAQ.md  FAQ_NEW.md  Home.md  Home_NEW.md  Installation.md  Installation_NEW.md  Quick-Start.md  Quick-Start_NEW.md  Troubleshooting
(+328 files in other folders)
