[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotifyscraper"
dynamic = ["version"]
description = "Extract public Spotify data — tracks, albums, artists, playlists, podcasts, and lyrics — without the official API. Sync + async, typed, one dependency."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ali Akhtari", email = "aliakhtari78@hotmail.com" }]
requires-python = ">=3.10"
# Cap below httpx 1.0: it restructures the public API (e.g. httpx.ConnectError),
# which this library uses. Relax once 1.0 is released and verified.
dependencies = ["httpx>=0.27,<1.0"]
keywords = [
  "spotify",
  "scraper",
  "web-scraping",
  "music",
  "metadata",
  "playlist",
  "podcast",
  "lyrics",
  "async",
  "spotify-api",
  "spotify-downloader",
  "no-api-key",
  "httpx",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Framework :: AsyncIO",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
media = ["mutagen>=1.47"]
browser = ["playwright>=1.49"]
cli = ["typer>=0.12"]
keyring = ["keyring>=24"]
all = ["spotifyscraper[media,browser,cli,keyring]"]

[project.scripts]
spotifyscraper = "spotify_scraper.cli:app"

[project.urls]
Homepage = "https://github.com/AliAkhtari78/SpotifyScraper"
Documentation = "https://spotifyscraper.readthedocs.io"
Repository = "https://github.com/AliAkhtari78/SpotifyScraper"
Changelog = "https://github.com/AliAkhtari78/SpotifyScraper/blob/master/CHANGELOG.md"
Issues = "https://github.com/AliAkhtari78/SpotifyScraper/issues"

[dependency-groups]
dev = [
  "mutagen>=1.47",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "pytest-timeout>=2.3",
  "respx>=0.22",
  "ruff>=0.9",
  "twine>=6.0",
  "typer>=0.12",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
]

[tool.hatch.version]
path = "src/spotify_scraper/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_scraper"]

[tool.hatch.build.targets.sdist]
# Ship a lean source distribution: the package, its tests, docs, and project
# metadata — not agent/spec tooling or release-only extras.
exclude = [
  "/.github",
  "/.claude",
  "/openspec",
  "/extras",
  "/scripts",
  "/site",
  "/CLAUDE.md",
  "/.gitmessage",
  "/.python-version",
  "/.pre-commit-config.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "S",   # flake8-bandit (security)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"] # asserts and dummy credentials are fine in tests

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["spotify_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-m 'not live and not browser' --strict-markers"
markers = [
  "live: tests that hit live Spotify endpoints (excluded by default; run with -m live)",
  "browser: tests that drive a real Playwright browser (excluded by default; run with -m browser)",
]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60

[tool.coverage.run]
source = ["src"]
branch = true
# The Playwright transport and the headed login helper require a real browser;
# they are exercised by the `browser`-marked suite in its own CI job, not the
# default coverage run.
omit = [
  "src/spotify_scraper/browser/login.py",
  "src/spotify_scraper/browser/playwright.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "@overload", "raise NotImplementedError"]
