[metadata]
with open(path.join(here, 'README.md'), encoding='utf-8') as f:
    long_description = f.read()
description-file = README.md
name = 'spotifyscraper'
version = '1.0.5'
description = 'Spotify Web Player Scraper using python, scrape and download song and cover from Spotify.'
long_description = long_description
long_description_content_type = 'text/markdown'
url = 'https://github.com/AliAkhtari78/SpotifyScraper'
author = 'Ali Akhtari'
author_email = 'aliakhtari78@hotmail.com'
classifiers =
    'Development Status :: 5 - Production/Stable

    'Intended Audience :: Developers'
    'Topic :: Software Development :: Build Tools'

    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'